--- a/src/style/block/control-bar.css
+++ b/src/style/block/control-bar.css
@@ -1,6 +1,7 @@
 .control-bar{
-    width: 600px;
+    width: 100%;
     height: 10%;
     display: flex;
     justify-content: space-around;
+    bottom: 0%;
 }
