feat,fix:スタイルの調整
headerも少し調整した
幅がバグってるけど、それはたまごんに任せる
こちら側で必要な分だけ調整しました

--- a/src/style/block/header.css
+++ b/src/style/block/header.css
@@ -1,12 +1,16 @@
 .header{
-	display: flex;
   height: 10%;
   width: 100%;
   background-color: #E5E5E5;
+
+  display: flex;
   align-items: center;
   position: fixed;
+  z-index: 500;
 }
-
+.header h1{
+  margin:0%;
+}
 .logo-header{
 	text-align: center;
 }
